# finance-stat

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
doc/: Diagram.drawio
finance-stat/: CMakeLists.txt  finance_stat.cxx
finance-stat/public/: simple_table.html
finance-stat/src/: ConnectionManager.cpp  ConnectionManager.h  CostsHandler.cpp  DatBaseService.cpp  DataBaseService.h  FilesService.cpp  FilesService.h  FinanceStat.cpp  MimeTypes.cpp  MimeTypes.h  RegistrationService.cpp  RegistrationService.h  RequestHandler.h  RequestParser.cpp  RequestParser.h  RoutesManager.cpp  RoutesManager.h  ServerRequestHandler.cpp  ServerRequestHandler.h  connection.cpp  connection.h  connection.hpp  connection_manager.cpp  connection_manager.h  connection_manager.hpp  costs_handler.cpp  costs_handler.hpp  data_base_service.cpp  data_base_service.h  files_service.cpp  files_service.h  finance_stat.cpp  header.h  header.hpp  iservice.h  mime_types.cpp  mime_types.h  mime_types.hpp  registration_service.cpp  registration_service.h  (+16 more)
services/: CMakeLists.txt
services/data_base_service/: CMakeLists.txt
services/data_base_service/src/: main.cpp
